# BugBee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
bugbee/: __init__.py  lazy.py  legacy.py  ui.py
bugbee/cache/: __init__.py
bugbee/cli/: main.py
bugbee/config/: settings.py
bugbee/llm/: __init__.py
bugbee/metrics/: __init__.py
bugbee/parser/: error_parser.py
bugbee/patcher/: __init__.py
bugbee/retrieval/: __init__.py
bugbee/utils/: logging.py
bugbee/validator/: __init__.py
docs/: Architecture.md
tests/: example.py  example.py.bak.20260620221321  example.py.bak.20260620223623  test.py  test2.py  test_parser.py
