[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugbee"
version = "0.1.1"
description = "AI-powered CLI debugging and auto-repair tool with RAG, automatic patch generation, and validation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"

authors = [
    { name = "Pranav Kurmadasu", email = "kurmadasu.pranav@example.com" }
]

keywords = [
    "debugger",
    "cli",
    "llm",
    "rag",
    "developer-tools",
    "ai",
    "python",
    "bug-fixing",
    "automation",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "loguru>=0.7.2",
    "platformdirs>=4.10.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "build>=1.2.1",
    "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/KurmadasuPranav7/bugbee"
Repository = "https://github.com/KurmadasuPranav7/bugbee"
Documentation = "https://github.com/KurmadasuPranav7/bugbee"
Issues = "https://github.com/KurmadasuPranav7/bugbee/issues"

[project.scripts]
bugbee = "bugbee.cli.main:app"

# ------------------------
# setuptools
# ------------------------

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bugbee*"]
exclude = [
    "tests*",
    "docs*",
    "examples*",
]

# ------------------------
# Ruff
# ------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

# ------------------------
# Black
# ------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

# ------------------------
# MyPy
# ------------------------

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

# ------------------------
# Pytest
# ------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
